--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <title>NOMAD</title>
 </head>
 <body>
+    <i class="fas fa-moon dark-view"></i>
     <section class="logo-container">
         <h1 id="logo">NOMAD.</h1>
         <img id="logo-img" src="assets/hand.png" alt="">
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
